svc-eu.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    svc-name: hello-world-eu
    version: v1
  name: hello-world-eu
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    version: v1
  type: ClusterIP
