gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: default
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
  namespace: default
spec:
  gateways:
  - nginx-gateway
  hosts:
  - test.com.sk
  http:
  - match:
    - uri:
        prefix: /de
    rewrite:
      uri: /
    route:
    - destination:
        host: hello-world-de
  - match:
    - uri:
        prefix: /es
    rewrite:
      uri: /
    route:
    - destination:
        host: hello-world-es
  - match:
    - uri:
        prefix: /fr
    rewrite:
      uri: /
    route:
    - destination:
        host: hello-world-fr
  - match:
    - uri:
        prefix: /eu
    rewrite:
      uri: /
    route:
    - destination:
        host: hello-world-eu
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-destination-rule-eu
spec:
  host: hello-world-eu
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
